# cargo-raze

./: .gitignore  .travis.yml  BUILD  Cargo.toml  README.md  WORKSPACE  default.nix  raze.sh
examples/cargo_cargo_library/: Cargo.toml  README.md
examples/complicated_cargo_library/: BUILD  Cargo.bzl  Cargo.toml  CargoOverrides.bzl
examples/complicated_cargo_library/src/: main.rs
examples/hello_cargo_library/: BUILD  Cargo.bzl  Cargo.toml  CargoOverrides.bzl  README.md
override/openssl-sys/: BUILD
raze/: BUILD  raze.bzl
src/: bazel.rs  context.rs  files.rs  init.rs  main.rs  planning.rs  rendering.rs  settings.rs  template_loader.rs  util.rs
src/templates/: BUILD.template  crate.BUILD.template  remote_crate.BUILD.template  remote_crates.bzl.template  remote_workspace.BUILD.template  workspace.BUILD.template
src/templates/partials/: build_script.template  remote_build_script.template  remote_rust_binary.template  remote_rust_library.template  rust_bench_test.template  rust_binary.template  rust_example.template  rust_library.template  rust_test.template
templates/: BUILD.template
tests/: lib.rs
