[package]
name = "cargo-raze"
version = "0.0.6"
authors = ["Alex McArther <acmcarther@gmail.com>"]
readme = "README.md"
keywords = ["subcommand"]
license = "Apache-2.0"
repository = "https://github.com/acmcarther/cargo-raze"
description = """
A Cargo subcommand to generate BUILD files for pre-vendored dependencies
"""

[dependencies]
rustc-serialize = "0.3"
cargo = "0.17.0"
itertools = "0.6.0"
tera = "0.10.9"
lazy_static = "0.2.8"
serde_derive = "1.0.11"
serde = "1.0.11"
