[package]
name = "cargo-raze"
version = "0.0.6"
authors = ["Alex McArther <acmcarther@gmail.com>"]
readme = "README.md"
keywords = ["subcommand"]
license = "Apache-2.0"
repository = "https://github.com/acmcarther/cargo-raze"
description = """
A Cargo subcommand to generate BUILD files for pre-vendored dependencies
"""

[dependencies]
rustc-serialize = "0.3"
itertools = "0.6.0"
tera = "0.10.9"
serde_derive = "1.0.11"
serde = "1.0.11"
fern = "0.4.3"
log = "0.3.8"
chrono = "0.4.0"
toml = "0.4.4"
url = "1.5.0"

[dependencies.cargo]
git = "https://github.com/rust-lang/cargo"
rev = "4c077033"

[dev-dependencies]
tempdir = "0.3.5"
lazy_static = "0.2.8"
hamcrest = "0.1.3"
